# elit

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json
.github/config/: packages.json
.github/scripts/: review_with_glm.py
.github/workflows/: all-publish.yml  deploy-docs.yml  deploy-package.yml  deploy-website.yml  publish-create-elit.yml  publish-elitjs-build.yml  publish-elitjs-chokidar.yml  publish-elitjs-cli.yml  publish-elitjs-config.yml  publish-elitjs-core.yml  publish-elitjs-database.yml  publish-elitjs-desktop-auto-render.yml  publish-elitjs-desktop.yml  publish-elitjs-dev-build.yml  publish-elitjs-devtools.yml  publish-elitjs-dom.yml  publish-elitjs-el.yml  publish-elitjs-fs.yml  publish-elitjs-hmr.yml  publish-elitjs-http.yml  publish-elitjs-https.yml  publish-elitjs-mime-types.yml  publish-elitjs-native.yml  publish-elitjs-path.yml  publish-elitjs-pm.yml  publish-elitjs-preview-build.yml  publish-elitjs-render-context.yml  (+16 more)
devtools-extension/: README.md  devtools.html  devtools.js  generate-icons.py  manifest.json  panel.css  panel.html  panel.js
docs/: CLI.md  CONFIG.md  package-lock.json
scripts/: audit-deps.py  build-all.mjs  change-version.mjs  generate-proxy-shims.mjs  inject-normalize-step.py  inject-wait-for-deps-step.py  install-all.mjs  normalize-deps.mjs  publish-all.mjs  rename-github-org.py  rewrite-template-imports.py  run-local-cli.mjs  scaffold-server-package.py  sync-package-meta.py  wait-for-deps.mjs
website/: build.mjs  elit.config.ts  index.html  package-lock.json  package.json  tsconfig.json
(+100 files in other folders)
