[package]
name = "elit-desktop"
version = "3.7.0"
edition = "2021"
build = "desktop/build.rs"

[lib]
name = "elit_desktop"
path = "desktop/lib.rs"

[[bin]]
name = "elit-desktop"
path = "desktop/main.rs"

[[bin]]
name = "elit-desktop-native"
path = "desktop/native_main.rs"

[features]
default = ["runtime-quickjs", "runtime-external"]
runtime-quickjs = ["dep:rquickjs"]
runtime-external = []

[dependencies]
eframe = "0.31"
tao = "0.34"
wry = "0.54"
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
resvg = "0.45"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
rquickjs = { version = "0.8", optional = true }
webbrowser = "1"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
opt-level = "z"

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
resvg = "0.45"
winres = "0.1"